# astromap

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
astromap/: catalog.py  segment.py  star.py  starmap.py
tests/: cairo_sample.py  exercise_catalog.py  render_map.py  test_version.py
